# defect

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: args.rs  bedrock.rs  config.rs  lib.rs  main.rs  openai.rs  output.rs  step.rs
src/step/: builder.rs
