[package]
name = "defect"
version = "0.1.0"
edition = "2021"

[dependencies]
openai-api-rs = "5.2.6"
anyhow = "1"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.65.0" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.30", features = ["derive"] }
