[package]
name = "defect"
version = "0.2.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
openai = "1.0.0"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.65.0" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.30", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"] }
