[package]
name = "defect"
version = "0.3.1"
edition = "2021"

[dependencies]
tracing = "0.1.41"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.65.0" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.30", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
serial_test = "3"
